--- a/resume/index.html
+++ b/resume/index.html
@@ -58,7 +58,7 @@
                             <div class="back">
                                 <h4>自我介绍</h4>
                                 <ul>
-                                    <li>正向前端转行的大龄已婚妇女，目前自学前端一年，掌握了以下技术</li>
+                                    <li>正向前端转行的老阿姨，目前自学前端一年，掌握了以下技术</li>
                                     <li>熟悉W3C标准，熟悉HTML5 、CSS3，了解Less、Sass</li>
                                     <li>熟悉面向对象Javascript和DOM、bom的操作 ，熟悉ajax/json等网络通信技术和数据交换格式</li>
                                     <li>熟悉es6语法</li>
