--- a/resume/index.html
+++ b/resume/index.html
@@ -319,7 +319,7 @@
                             <a href="#"><img src="images/qq.png"></a>
                         </div>
                     </div>
-                    <p>手捧菲薄求职之书，心怀自信诚挚之念，我期待着能为成为贵公司的一员！</p>
+                    <p>手捧菲薄求职之书，心怀自信诚挚之念，我期待着能成为贵公司的一员！</p>
                 </div>
         </div>
     </section>
