--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -96,7 +96,7 @@
                             </li>
                             <li class="row">
                                 <div class="col-sm-3"><strong>工作经验</strong></div>
-                                <div class="col-sm-9">5年</div>
+                                <div class="col-sm-9">6年</div>
                             </li>
                             <li class="row">
                                 <div class="col-sm-3"><strong>电话</strong></div>
